--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   "author": "John Barker",
   "license": "MIT",
   "devDependencies": {
-    "electron": "^1.8.8",
+    "electron": "^11.5.0",
     "electron-packager": "^12.1.0"
   },
   "dependencies": {
-    "google-spreadsheet-to-json": "^1.0.0",
     "jquery": "^3.3.1",
     "looks-same": "^3.3.0",
+    "spreadsheet-to-json": "^2.0.0",
     "timr": "^2.0.0"
   }
 }
